# sorting-algo

src/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  generator.cpp  main.cpp
src/Generator/: generate.cpp
src/classes/: gen.cpp  sort.cpp
src/include/: gen.h  generator.h  sort.h
